recursion.lessons.recursion.koch.Koch.scala.error
Koch:16: error: not found: value level
		snowSide(level-1,length);
                         ^